--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+         <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>12.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
